change image url

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <div class="container">
         <section id="about">
             <h2>អំពីខ្ញុំ</h2>
-            <img src="https://scontent.fpnh24-1.fna.fbcdn.net/v/t39.30808-6/462003259_8344306362351982_5195897449031454810_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=gYooi_8xHB4Q7kNvwFZdZuh&_nc_oc=Adm2tVp4bGAclc9uGhRaHrlkkshYoX4RftzxhUL83lHmEB-ZNTs2MSMvaXGKYY3eMMA&_nc_zt=23&_nc_ht=scontent.fpnh24-1.fna&_nc_gid=ZJiwRDnPYfpW8UlsLKWSTg&oh=00_AfKf0KFW4R7A0TSGmHDs3xlQpEK77OPrnNLVnFnDBMgb5w&oe=68337949" alt="Profile Image" class="profile-img">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT0KhRLuBBP1irz1yWScTeLkptHnLLaqupNSQ&s" alt="Profile Image" class="profile-img">
             <p>សួស្ដី ខ្ញុំឈ្មោះរ៉េត ទ្រី ខ្ញុំធ្វើផ្នែក Full-Stack Developer រយះពេលជិត៨ឆ្នាំហើយ បើគិតត្រឹមថ្ងៃទី០៨ ខែមករា ឆ្នាំ២០២៥។ ពេលទំនេរខ្ញុំចូលចិត្តសិក្សារស្រាវជ្រាវបច្ចេកវិទ្យាថ្មីៗ និងសិក្សារពីអ្វីដែលថ្មី ហើយសម្រាប់កីឡាខ្ញុំចូលចិត្តបាល់ទាស និងបាល់ទាត់។</p>
         </section>
         
