--- a/index.html
+++ b/index.html
@@ -1,152 +1,1 @@
-<!DOCTYPE html>
-<html lang="km">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title data-lang-kh="ប្រវត្តិរូបសង្ខេប" data-lang-en="Portfolio">ប្រវត្តិរូបសង្ខេប</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
-</head>
-
-<body>
-
-    <div class="lang-toggle" aria-label="Language toggle">
-        <button type="button" id="lang-toggle-btn" aria-pressed="true" aria-label="Switch language">
-            <img id="lang-flag" src="images/kh.svg" alt="khmer">
-            <span id="lang-label">ភាសាខ្មែរ</span>
-        </button>
-    </div>
-
-    <header>
-        <h1 id="name" data-lang-kh="រ៉េត ទ្រី" data-lang-en="Ret Try">រ៉េត ទ្រី</h1>
-        <p id="role" data-lang-kh="អ្នកអភិវឌ្ឍន៍ Full-Stack" data-lang-en="Full-Stack Developer">អ្នកអភិវឌ្ឍន៍
-            Full-Stack</p>
-    </header>
-
-    <nav>
-        <ul>
-            <li><a href="#about" id="nav-about" data-lang-kh="អំពីខ្ញុំ" data-lang-en="About Me">អំពីខ្ញុំ</a></li>
-            <li><a href="#projects" id="nav-projects" data-lang-kh="ការងារ" data-lang-en="Projects">ការងារ</a></li>
-            <li><a href="#skills" id="nav-skills" data-lang-kh="ជំនាញ" data-lang-en="Skills">ជំនាញ</a></li>
-            <li><a href="#contact" id="nav-contact" data-lang-kh="ទំនាក់ទំនង" data-lang-en="Contact">ទំនាក់ទំនង</a></li>
-        </ul>
-    </nav>
-
-    <div class="container">
-        <section id="about">
-            <h2 id="about-title" data-lang-kh="អំពីខ្ញុំ" data-lang-en="About Me">អំពីខ្ញុំ</h2>
-            <img src="images/profile.jpg" alt="" class="profile-img" />
-            <p id="about-paragraph"
-                data-lang-kh="សួស្ដី ខ្ញុំឈ្មោះរ៉េត ទ្រី ខ្ញុំធ្វើផ្នែក Full-Stack Developer រយះពេល៨ឆ្នាំហើយ បើគិតត្រឹមថ្ងៃទី០៨ ខែមករា ឆ្នាំ២០២៥។ ពេលទំនេរខ្ញុំចូលចិត្តសិក្សារស្រាវជ្រាវបច្ចេកវិទ្យាថ្មីៗ និងសិក្សារពីអ្វីដែលថ្មី ហើយសម្រាប់កីឡាខ្ញុំចូលចិត្តបាល់ទះ និងបាល់ទាត់។"
-                data-lang-en="Hi, I am Ret Try. I am a Full-Stack Developer with 8 years of experience as of 2025 January 8th . In my free time I enjoy learning new technologies, playing volleyball and football.">
-                សួស្ដី ខ្ញុំឈ្មោះរ៉េត ទ្រី ខ្ញុំធ្វើផ្នែក Full-Stack Developer រយះពេលជិត៨ឆ្នាំហើយ បើគិតត្រឹមថ្ងៃទី០៨
-                ខែមករា ឆ្នាំ២០២៥។ ពេលទំនេរខ្ញុំចូលចិត្តសិក្សារស្រាវជ្រាវបច្ចេកវិទ្យាថ្មីៗ និងសិក្សារពីអ្វីដែលថ្មី
-                ហើយសម្រាប់កីឡាខ្ញុំចូលចិត្តបាល់ទះ និងបាល់ទាត់។
-            </p>
-        </section>
-
-        <section id="projects">
-            <h2 id="projects-title" data-lang-kh="ការងារមួយចំនួនដែលខ្ញុំធ្លាប់ធ្វើ"
-                data-lang-en="Some Projects I Worked On">ការងារមួយចំនួនដែលខ្ញុំធ្លាប់ធ្វើ</h2>
-            <div class="projects">
-                <div class="project">
-                    <h3 id="proj1-title" data-lang-kh="គេហទំព័រសម្រាប់លក់សំបុត្រកុន" data-lang-en="E-commerce Website">
-                        គេហទំព័រសម្រាប់លក់សំបុត្រកុន</h3>
-                    <p id="proj1-desc"
-                        data-lang-kh="បង្កើតគេហទំព័រសម្រាប់លក់សំបុត្រកុន ដោយអ្នកប្រើប្រាស់អាចធ្វើការបង់ប្រាក់តាមរយះកម្មវិធីទូរស័ព្ទរបស់ធនាគាតាមរយះបាគង Visa និង Master Card ជាដើម។"
-                        data-lang-en="Built an e-commerce site for ticket sales allowing payments via KHQR, Visa, MasterCard and other gateways.">
-                        បង្កើតគេហទំព័រសម្រាប់លក់សំបុត្រកុន
-                        ដោយអ្នកប្រើប្រាស់អាចធ្វើការបង់ប្រាក់តាមរយះកម្មវិធីទូរស័ព្ទរបស់ធនាគាតាមរយះបាគង Visa និង Master
-                        Card ជាដើម។
-                    </p>
-                    <a id="proj1-link" href="https://primecineplex.com/" target="_blank" data-lang-kh="ចូលមើល"
-                        data-lang-en="View">ចូលមើល</a>
-                </div>
-
-                <div class="project">
-                    <h3 id="proj2-title" data-lang-kh="កម្មវិធីទូរស័ព្ទដៃ" data-lang-en="Mobile App">កម្មវិធីទូរស័ព្ទដៃ
-                    </h3>
-                    <p id="proj2-desc"
-                        data-lang-kh="បង្កើតកម្មវិធីទូរស័ព្ទទាំង iOS និង Android សម្រាប់លក់សំបុត្រកុន ដោយអ្នកប្រើប្រាស់អាចធ្វើការបង់ប្រាក់តាមរយះកម្មវិធីទូរស័ព្ទរបស់ធនាគាតាមរយះបាគង Visa និង Master Card ជាដើម។"
-                        data-lang-en="Developed iOS and Android apps for ticket sales with integrated payment flows.">
-                        បង្កើតកម្មវិធីទូរស័ព្ទទាំង iOS និង Android សម្រាប់លក់សំបុត្រកុន
-                        ដោយអ្នកប្រើប្រាស់អាចធ្វើការបង់ប្រាក់តាមរយះកម្មវិធីទូរស័ព្ទរបស់ធនាគាតាមរយះបាគង Visa និង Master
-                        Card ជាដើម។
-                    </p>
-                    <a id="proj2-link" href="#" data-lang-kh="ចូលមើល" data-lang-en="View">ចូលមើល</a>
-                </div>
-
-                <div class="project">
-                    <h3 id="proj3-title" data-lang-kh="Kiosk" data-lang-en="Kiosk">Kiosk</h3>
-                    <p id="proj3-desc"
-                        data-lang-kh="បង្កើត Kiosk ដែលអនុញ្ញាតិអោយអ្នកប្រើប្រាស់ទូទៅអាចធ្វើការទិញសំបុត្រដោយទូទាត់តាមរយះ KHQR (បាគង) និងយកសំបុត្រកុនជាមួយម៉ាស៊ីននឹងបានដោយខ្លួនឯងផ្ទាល់។"
-                        data-lang-en="Built a kiosk system allowing users to purchase tickets using KHQR and print tickets on-site.">
-                        បង្កើត Kiosk ដែលអនុញ្ញាតិអោយអ្នកប្រើប្រាស់ទូទៅអាចធ្វើការទិញសំបុត្រដោយទូទាត់តាមរយះ KHQR (បាគង)
-                        និងយកសំបុត្រកុនជាមួយម៉ាស៊ីននឹងបានដោយខ្លួនឯងផ្ទាល់។
-                    </p>
-                    <a id="proj3-link" href="#" data-lang-kh="ចូលមើល" data-lang-en="View">ចូលមើល</a>
-                </div>
-
-                <div class="project">
-                    <h3 id="proj4-title" data-lang-kh="ប្រព័ន្ធ POS" data-lang-en="POS System">ប្រព័ន្ធ POS</h3>
-                    <p id="proj4-desc"
-                        data-lang-kh="បង្កើតប្រព័ន្ធសម្រាប់លក់សំបុត្រកុន និងអាហារភេសជ្ជៈដោយអនុញ្ញាតិអោយអ្នកប្រើប្រាស់អាចទូទាត់ជាសាច់ប្រាក់ ធនាគា (KHQR) ប័ណ្ណបញ្ចុះតម្លៃ QR Code បញ្ចុះតម្លៃ និងផ្សេងៗទៀត"
-                        data-lang-en="Developed a POS system for ticket and concession sales with multiple payment support.">
-                        បង្កើតប្រព័ន្ធសម្រាប់លក់សំបុត្រកុន
-                        និងអាហារភេសជ្ជៈដោយអនុញ្ញាតិអោយអ្នកប្រើប្រាស់អាចទូទាត់ជាសាច់ប្រាក់ ធនាគា (KHQR) ប័ណ្ណបញ្ចុះតម្លៃ
-                        QR Code បញ្ចុះតម្លៃ និងផ្សេងៗទៀត
-                    </p>
-                    <a id="proj4-link" href="#" data-lang-kh="ចូលមើល" data-lang-en="View">ចូលមើល</a>
-                </div>
-            </div>
-        </section>
-
-        <section id="skills">
-            <h2 id="skills-title" data-lang-kh="ជំនាញ" data-lang-en="Skills">ជំនាញ</h2>
-            <ul id="skills-list">
-                <li data-lang-kh="HTML5" data-lang-en="HTML5">HTML5</li>
-                <li data-lang-kh="CSS3" data-lang-en="CSS3">CSS3</li>
-                <li data-lang-kh="JavaScript (ES6+)" data-lang-en="JavaScript (ES6+)">JavaScript (ES6+)</li>
-                <li data-lang-kh="ភាសា C" data-lang-en="C Programming">ភាសា C</li>
-                <li data-lang-kh="ភាសា C++" data-lang-en="C++ Programming">ភាសា C++</li>
-                <li data-lang-kh="ភាសា C#" data-lang-en="C# Programming">ភាសា C#</li>
-                <li data-lang-kh=".NET Framework" data-lang-en=".NET Framework">.NET Framework</li>
-                <li data-lang-kh="ASP.NET MVC" data-lang-en="ASP.NET MVC">ASP.NET MVC</li>
-                <li data-lang-kh="RESTful API" data-lang-en="RESTful API">RESTful API</li>
-                <li data-lang-kh="Dart" data-lang-en="Dart Programming">Dart</li>
-                <li data-lang-kh="Flutter" data-lang-en="Flutter Framework">Flutter</li>
-                <li data-lang-kh="UI/UX" data-lang-en="UI/UX">UI/UX</li>
-                <li data-lang-kh="SQL Server" data-lang-en="SQL Server">SQL Server</li>
-                <li data-lang-kh="Version Control (Git)" data-lang-en="Version Control (Git)">Version Control (Git)</li>
-            </ul>
-        </section>
-
-        <section id="contact">
-            <h2 id="contact-title" data-lang-kh="ទំនាក់ទំនង" data-lang-en="Contact">ទំនាក់ទំនង</h2>
-            <div class="contact-info">
-                <p id="contact-email" data-lang-kh="សារអេឡិចត្រូនិច" data-lang-en="Email">សារអេឡិចត្រូនិច</p>
-                <p><a href="mailto:trydev1995@gmail.com">trydev1995@gmail.com</a></p>
-
-                <p id="contact-phone-label" data-lang-kh="លេខទូរស័ព្ទ" data-lang-en="Phone">លេខទូរស័ព្ទ</p>
-                <p><a href="tel:+855967892018">(855) 96-789-2018</a></p>
-
-                <p id="contact-linkedin-label" data-lang-kh="LinkedIn" data-lang-en="LinkedIn">LinkedIn</p>
-                <p><a href="https://kh.linkedin.com/in/try-ret-b30943151"
-                        target="_blank">linkedin.com/in/try-ret-b30943151</a></p>
-
-                <p id="contact-github-label" data-lang-kh="GitHub" data-lang-en="GitHub">GitHub</p>
-                <p><a href="https://github.com/TryTec" target="_blank">github.com/TryTec</a></p>
-            </div>
-        </section>
-
-        <button id="gotop" aria-label="Go to top" data-lang-kh="↑ ទៅលើ" data-lang-en="↑ Top">↑ Top</button>
-    </div>
-
-    <footer>
-        <p id="footer-text" data-lang-kh="© 2025 រ៉េត ទ្រី. រក្សា​សិទ្ធិ​គ្រប់​យ៉ាង."
-            data-lang-en="© 2025 Ret Try. All rights reserved.">© 2025 រ៉េត ទ្រី. រក្សា​សិទ្ធិ​គ្រប់​យ៉ាង.</p>
-    </footer>
-</body>
-
-</html>
+<!doctypehtml><html lang=km><meta charset=UTF-8><meta content="width=device-width,initial-scale=1"name=viewport><title data-lang-en=Portfolio data-lang-kh=ប្រវត្តិរូបសង្ខេប>ប្រវត្តិរូបសង្ខេប</title><link href=style.css rel=stylesheet><script defer src=script.js></script><div class=lang-toggle aria-label="Language toggle"><button aria-label="Switch language"id=lang-toggle-btn aria-pressed=true type=button><img alt=khmer src=images/kh.svg id=lang-flag> <span id=lang-label>ភាសាខ្មែរ</span></button></div><header><h1 data-lang-en="Ret Try"data-lang-kh="រ៉េត ទ្រី"id=name>រ៉េត ទ្រី</h1><p data-lang-en="Full-Stack Developer"data-lang-kh="អ្នកអភិវឌ្ឍន៍ Full-Stack"id=role>អ្នកអភិវឌ្ឍន៍ Full-Stack</header><nav><ul><li><a href=#about data-lang-en="About Me"data-lang-kh=អំពីខ្ញុំ id=nav-about>អំពីខ្ញុំ</a><li><a href=#projects data-lang-en=Projects data-lang-kh=ការងារ id=nav-projects>ការងារ</a><li><a href=#skills data-lang-en=Skills data-lang-kh=ជំនាញ id=nav-skills>ជំនាញ</a><li><a href=#contact data-lang-en=Contact data-lang-kh=ទំនាក់ទំនង id=nav-contact>ទំនាក់ទំនង</a></ul></nav><div class=container><section id=about><h2 data-lang-en="About Me"data-lang-kh=អំពីខ្ញុំ id=about-title>អំពីខ្ញុំ</h2><img alt=""src=images/profile.jpg class=profile-img><p data-lang-en="Hi, I am Ret Try. I am a Full-Stack Developer with 8 years of experience as of 2025 January 8th . In my free time I enjoy learning new technologies, playing volleyball and football."data-lang-kh="សួស្ដី ខ្ញុំឈ្មោះរ៉េត ទ្រី ខ្ញុំធ្វើផ្នែក Full-Stack Developer រយះពេល៨ឆ្នាំហើយ បើគិតត្រឹមថ្ងៃទី០៨ ខែមករា ឆ្នាំ២០២៥។ ពេលទំនេរខ្ញុំចូលចិត្តសិក្សារស្រាវជ្រាវបច្ចេកវិទ្យាថ្មីៗ និងសិក្សារពីអ្វីដែលថ្មី ហើយសម្រាប់កីឡាខ្ញុំចូលចិត្តបាល់ទះ និងបាល់ទាត់។"id=about-paragraph>សួស្ដី ខ្ញុំឈ្មោះរ៉េត ទ្រី ខ្ញុំធ្វើផ្នែក Full-Stack Developer រយះពេលជិត៨ឆ្នាំហើយ បើគិតត្រឹមថ្ងៃទី០៨ ខែមករា ឆ្នាំ២០២៥។ ពេលទំនេរខ្ញុំចូលចិត្តសិក្សារស្រាវជ្រាវបច្ចេកវិទ្យាថ្មីៗ និងសិក្សារពីអ្វីដែលថ្មី ហើយសម្រាប់កីឡាខ្ញុំចូលចិត្តបាល់ទះ និងបាល់ទាត់។</section><section id=projects><h2 data-lang-en="Some Projects I Worked On"data-lang-kh=ការងារមួយចំនួនដែលខ្ញុំធ្លាប់ធ្វើ id=projects-title>ការងារមួយចំនួនដែលខ្ញុំធ្លាប់ធ្វើ</h2><div class=projects><div class=project><h3 data-lang-en="E-commerce Website"data-lang-kh=គេហទំព័រសម្រាប់លក់សំបុត្រកុន id=proj1-title>គេហទំព័រសម្រាប់លក់សំបុត្រកុន</h3><p data-lang-en="Built an e-commerce site for ticket sales allowing payments via KHQR, Visa, MasterCard and other gateways."data-lang-kh="បង្កើតគេហទំព័រសម្រាប់លក់សំបុត្រកុន ដោយអ្នកប្រើប្រាស់អាចធ្វើការបង់ប្រាក់តាមរយះកម្មវិធីទូរស័ព្ទរបស់ធនាគាតាមរយះបាគង Visa និង Master Card ជាដើម។"id=proj1-desc>បង្កើតគេហទំព័រសម្រាប់លក់សំបុត្រកុន ដោយអ្នកប្រើប្រាស់អាចធ្វើការបង់ប្រាក់តាមរយះកម្មវិធីទូរស័ព្ទរបស់ធនាគាតាមរយះបាគង Visa និង Master Card ជាដើម។</p><a href=https://primecineplex.com/ data-lang-en=View data-lang-kh=ចូលមើល id=proj1-link target=_blank>ចូលមើល</a></div><div class=project><h3 data-lang-en="Mobile App"data-lang-kh=កម្មវិធីទូរស័ព្ទដៃ id=proj2-title>កម្មវិធីទូរស័ព្ទដៃ</h3><p data-lang-en="Developed iOS and Android apps for ticket sales with integrated payment flows."data-lang-kh="បង្កើតកម្មវិធីទូរស័ព្ទទាំង iOS និង Android សម្រាប់លក់សំបុត្រកុន ដោយអ្នកប្រើប្រាស់អាចធ្វើការបង់ប្រាក់តាមរយះកម្មវិធីទូរស័ព្ទរបស់ធនាគាតាមរយះបាគង Visa និង Master Card ជាដើម។"id=proj2-desc>បង្កើតកម្មវិធីទូរស័ព្ទទាំង iOS និង Android សម្រាប់លក់សំបុត្រកុន ដោយអ្នកប្រើប្រាស់អាចធ្វើការបង់ប្រាក់តាមរយះកម្មវិធីទូរស័ព្ទរបស់ធនាគាតាមរយះបាគង Visa និង Master Card ជាដើម។</p><a href=# data-lang-en=View data-lang-kh=ចូលមើល id=proj2-link>ចូលមើល</a></div><div class=project><h3 data-lang-en=Kiosk data-lang-kh=Kiosk id=proj3-title>Kiosk</h3><p data-lang-en="Built a kiosk system allowing users to purchase tickets using KHQR and print tickets on-site."data-lang-kh="បង្កើត Kiosk ដែលអនុញ្ញាតិអោយអ្នកប្រើប្រាស់ទូទៅអាចធ្វើការទិញសំបុត្រដោយទូទាត់តាមរយះ KHQR (បាគង) និងយកសំបុត្រកុនជាមួយម៉ាស៊ីននឹងបានដោយខ្លួនឯងផ្ទាល់។"id=proj3-desc>បង្កើត Kiosk ដែលអនុញ្ញាតិអោយអ្នកប្រើប្រាស់ទូទៅអាចធ្វើការទិញសំបុត្រដោយទូទាត់តាមរយះ KHQR (បាគង) និងយកសំបុត្រកុនជាមួយម៉ាស៊ីននឹងបានដោយខ្លួនឯងផ្ទាល់។</p><a href=# data-lang-en=View data-lang-kh=ចូលមើល id=proj3-link>ចូលមើល</a></div><div class=project><h3 data-lang-en="POS System"data-lang-kh="ប្រព័ន្ធ POS"id=proj4-title>ប្រព័ន្ធ POS</h3><p data-lang-en="Developed a POS system for ticket and concession sales with multiple payment support."data-lang-kh="បង្កើតប្រព័ន្ធសម្រាប់លក់សំបុត្រកុន និងអាហារភេសជ្ជៈដោយអនុញ្ញាតិអោយអ្នកប្រើប្រាស់អាចទូទាត់ជាសាច់ប្រាក់ ធនាគា (KHQR) ប័ណ្ណបញ្ចុះតម្លៃ QR Code បញ្ចុះតម្លៃ និងផ្សេងៗទៀត"id=proj4-desc>បង្កើតប្រព័ន្ធសម្រាប់លក់សំបុត្រកុន និងអាហារភេសជ្ជៈដោយអនុញ្ញាតិអោយអ្នកប្រើប្រាស់អាចទូទាត់ជាសាច់ប្រាក់ ធនាគា (KHQR) ប័ណ្ណបញ្ចុះតម្លៃ QR Code បញ្ចុះតម្លៃ និងផ្សេងៗទៀត</p><a href=# data-lang-en=View data-lang-kh=ចូលមើល id=proj4-link>ចូលមើល</a></div></div></section><section id=skills><h2 data-lang-en=Skills data-lang-kh=ជំនាញ id=skills-title>ជំនាញ</h2><ul id=skills-list><li data-lang-en=HTML5 data-lang-kh=HTML5>HTML5<li data-lang-en=CSS3 data-lang-kh=CSS3>CSS3<li data-lang-en="JavaScript (ES6+)"data-lang-kh="JavaScript (ES6+)">JavaScript (ES6+)<li data-lang-en="C Programming"data-lang-kh="ភាសា C">ភាសា C<li data-lang-en="C++ Programming"data-lang-kh="ភាសា C++">ភាសា C++<li data-lang-en="C# Programming"data-lang-kh="ភាសា C#">ភាសា C#<li data-lang-en=".NET Framework"data-lang-kh=".NET Framework">.NET Framework<li data-lang-en="ASP.NET MVC"data-lang-kh="ASP.NET MVC">ASP.NET MVC<li data-lang-en="RESTful API"data-lang-kh="RESTful API">RESTful API<li data-lang-en="Dart Programming"data-lang-kh=Dart>Dart<li data-lang-en="Flutter Framework"data-lang-kh=Flutter>Flutter<li data-lang-en=UI/UX data-lang-kh=UI/UX>UI/UX<li data-lang-en="SQL Server"data-lang-kh="SQL Server">SQL Server<li data-lang-en="Version Control (Git)"data-lang-kh="Version Control (Git)">Version Control (Git)</ul></section><section id=contact><h2 data-lang-en=Contact data-lang-kh=ទំនាក់ទំនង id=contact-title>ទំនាក់ទំនង</h2><div class=contact-info><p data-lang-en=Email data-lang-kh=សារអេឡិចត្រូនិច id=contact-email>សារអេឡិចត្រូនិច<p><a href=mailto:trydev1995@gmail.com>trydev1995@gmail.com</a><p data-lang-en=Phone data-lang-kh=លេខទូរស័ព្ទ id=contact-phone-label>លេខទូរស័ព្ទ<p><a href=tel:+855967892018>(855) 96-789-2018</a><p data-lang-en=LinkedIn data-lang-kh=LinkedIn id=contact-linkedin-label>LinkedIn<p><a href=https://kh.linkedin.com/in/try-ret-b30943151 target=_blank>linkedin.com/in/try-ret-b30943151</a><p data-lang-en=GitHub data-lang-kh=GitHub id=contact-github-label>GitHub<p><a href=https://github.com/TryTec target=_blank>github.com/TryTec</a></div></section><button aria-label="Go to top"id=gotop data-lang-en="↑ Top"data-lang-kh="↑ ទៅលើ">↑ Top</button></div><footer><p data-lang-en="© 2025 Ret Try. All rights reserved."data-lang-kh="© 2025 រ៉េត ទ្រី. រក្សា​សិទ្ធិ​គ្រប់​យ៉ាង."id=footer-text>© 2025 រ៉េត ទ្រី. រក្សា​សិទ្ធិ​គ្រប់​យ៉ាង.</footer>
